# stanford-ros-pkg

./: ProjectHome.md  rosdep.yaml  stack.xml
3dscanning/graycode_scanner/: CMakeLists.txt
3dscanning/projector/: mainpage.dox
ancient_powercube/: ancient_powercube.cpp  node.cpp  set_pan_tilt.cpp
chessbot/chessbot/: chessbot.py  (+5 more)
hydra_pr2_teleop/: CMakeLists.txt  cart.launch  manifest.xml  simulator_notes.txt  teleop_pr2_hydra.cpp
multiview/: CMakeLists.txt  mainpage.dox  manifest.xml
openarms/: CMakeLists.txt  manifest.xml
openarms/control/: control_jointspace.cpp  find_stepper_home.cpp  goto_cart.cpp  goto_photo_op.sh  goto_pos.py  goto_shake_hand.sh  goto_workspace_center.sh  print_joint_states.py  relative_control_skeleton.cpp  repeatability_test.sh  set_joint_target.py  trajectory_follower.cpp  trajectory_sender.cpp  waypoint_keyboard.cpp
openarms/control/traj/: batter_wp  scoop2_traj  scoop2_traj_justflip  scoop2_wp
openarms/drivers/: armbus.cpp  oa-torso.cpp
openarms/firmware/dualgecko/: dualgecko.aps  dualgecko.c
openarms/firmware/encoder-xmega/: encoder-xmega.c
openarms/firmware/oa6-gripper/: oa6-gripper.c
openarms/firmware/oa6-torso/: oa6-torso.c
openarms/firmware/oa6-upperarm/: Makefile  oa6-upperarm.c
openarms/ik/: ik_test.cpp
openarms/launch/: cartesian.launch  dummy_state.launch  ik_test.launch  master_gamepad.launch  robot.launch  shirt-debug.launch  sim.launch  spacepoint_shirt.launch  teleop_gripper.launch  teleop_torso.launch  teleop_vel.launch
openarms/logging/: controller_data_extract.py
openarms/master/: master_gamepad.cpp  master_keyboard.cpp  master_spacepointshirt.cpp  master_spacepointshirt2.cpp  wiimote_master.cpp
openarms/msg/: ArmActuators.msg  ArmIKRequest.msg  GripperPosition.msg  StepperTarget.msg  Trajectory.msg  TrajectoryPoint.msg
openarms/sim/: armbus_sim.cpp
openarms/srv/: ArmIKParams.srv
openarms/state/: calibration_data  oa-state.cpp
openarms/teleop/: arm_teleop  oa_gripper_teleop  teleop_vel
openarms/urdf/: checkout_meshes.sh  oa6.xml  oa9.xml
openarms/urdf/meshes/: wrist-pitch.stl  wrist-roll.stl
pancakebot/: CMakeLists.txt  manifest.xml
pancakebot/include/pancakebot/: pancakes.h
pancakebot/launch/: cam_view.launch  pancake_detector.launch
pancakebot/src/: pancakes.cpp
recyclerbot/: CMakeLists.txt  mainpage.dox  manifest.xml
recyclerbot/action/: Grasp.action
recyclerbot/include/recyclerbot/: object_detector.h  table_detector.h
recyclerbot/include/recyclerbot/STANN/: Makefile  sfcnn.hpp  test.hpp  zorder_type_traits.hpp
recyclerbot/launch/: data_collection.launch  data_play.launch  laser-perception.launch  twoarm.launch
recyclerbot/msg/: Cylinder.msg  GraspClientActionGoal.msg  GraspClientActionResult.msg  GraspResult.msg
recyclerbot/msg/lisp/recyclerbot/: .CylinderArray.asd-dep  .GraspActionGoal.asd-dep  .GraspClientActionFeedback.asd-dep  CylinderArray.lisp  GraspActionFeedback.lisp  GraspActionResult.lisp  GraspClientAction.lisp  GraspClientActionResult.lisp  GraspClientResult.lisp  GraspResult.lisp  _package.lisp  _package_Cylinder.lisp  _package_CylinderArray.lisp  _package_GraspActionFeedback.lisp  _package_GraspClientAction.lisp  _package_GraspClientActionResult.lisp  _package_GraspClientResult.lisp
recyclerbot/scripts/: read_bag.py
recyclerbot/src/: grasp_server.cpp  object_detector.cpp  object_detector_node.cpp  recyclerbot_master.cpp  table_detector.cpp  table_detector_node.cpp
sortbot/: manifest.xml
spacepoint/: CMakeLists.txt  manifest.xml  spacepoint_node.cpp
trunk/: rosdep.yaml
trunk/ancient_powercube/: CMakeLists.txt  home.cpp  manifest.xml
trunk/ancient_powercube/include/ancient_powercube/: ancient_powercube.h
trunk/low_cost_localization/wifi_sniffer/: CMakeLists.txt  manifest.xml  part2_config.txt  wifi_sniffer.cpp
trunk/low_cost_localization/wifi_sniffer/msg/: WifiScan.msg
trunk/low_cost_localization/wifi_sniffer/msg/lisp/wifi_sniffer/: WifiScan.lisp  WifiSniff.lisp  _package_WifiSniff.lisp
trunk/low_cost_localization/wifi_sniffer/msg_gen/cpp/include/wifi_sniffer/: WifiScan.h  WifiSniff.h
trunk/low_cost_localization/wifi_sniffer/src/: ConfigFileLoader.cpp  Publisher.h  pose.cpp  pose.h  posePDF.h  runner.cpp  wifi_sniffer_node.cpp
trunk/low_cost_localization/wifi_sniffer/src/wifi_sniffer/msg/: _WifiScan.py
trunk/low_cost_localization/wifi_sniffer/test/: test.text
trunk/openarms/: CMakeLists.txt  manifest.xml
trunk/openarms/control/: chatter.cpp  control_jointspace.cpp  elbow_up_position  goto_cart.cpp  goto_clasp_hand.sh  goto_photo_op.sh  goto_powerdown.sh  goto_shake_hand.sh  goto_workspace_center.sh  trajectory_follower.cpp  waypoint_keyboard.cpp
trunk/openarms/control/traj/: batter_traj  scoop2_traj  scoop2_traj_justdump  scoop2_traj_justflip
trunk/openarms/drivers/: armbus.cpp  oa-gripper.cpp  oa-upperarm.cpp
trunk/openarms/firmware/borg3/: Makefile  borg3.c
trunk/openarms/firmware/dualgecko/: dualgecko.aps  dualgecko.c
trunk/openarms/firmware/encoder-xmega/: encoder-xmega.aps
trunk/openarms/firmware/oa6-gripper/: oa6-gripper.aps  oa6-gripper.aws
trunk/openarms/firmware/oa6-torso/: Makefile  oa6-torso.c
trunk/openarms/launch/: dummy_state.launch  ik_test.launch  master.launch  robot.launch  shirt-debug.launch  sim_ik.launch  teleop_torso.launch  teleop_vel.launch
trunk/openarms/master/: master_gamepad.cpp  master_keyboard.cpp  master_spacepointshirt.cpp  master_spacepointshirt3.cpp  spacepoint_suit_to_tf.py
trunk/openarms/msg/: ArmActuators.msg  ArmSensors.msg
trunk/openarms/sim/: armbus_sim.cpp
trunk/openarms/srv/: SetJointTarget.srv
trunk/openarms/state/: calibration_data  oa-state.cpp  state-dummy.cpp
trunk/openarms/teleop/: teleop_vel  torso_teleop  upperarm_teleop
trunk/openarms/urdf/: human.xml  idealized.xml  oa6.xml
trunk/openarms/urdf/meshes/: lowerarm-middle.stl  wrist-pitch.stl
trunk/sortbot/: CMakeLists.txt
trunk/sortbot/launch/: collect_data.launch
trunk/sortbot/scripts/: projector_off.sh  projector_on.sh  start_laser.sh  stop_laser.sh
trunk/sortbot/src/: data_center.cpp
(+234 files in other folders)
